[package]
name = "topic-sentiment"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.2.25", features = ["derive"] }
tokio = { version = "1.29.1", features = ["full"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
reqwest = { version = "0.11.18", features = ["json"] }
vader_sentiment = "^0.1.1"
